[tool.poetry]
name = "repl_python3_My-Nuker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
aiohttp = "^3.7.4"
discord = "^1.7.3"
lxml = "^4.6.3"
nmap = "^0.0.1"
colorama = "^0.4.4"
pyfiglet = "^0.8.post1"
pylint = "^2.9.6"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
